--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^1.1.2",
+    "koa-body-parser": "^1.1.2",
+    "koa-route": "^2.4.2",
+    "koa-static": "^1.5.2"
+  }
 }
