--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.4.7",
     "koa": "^1.1.2",
     "koa-body-parser": "^1.1.2",
     "koa-route": "^2.4.2",
